syntax = "proto3";

package user_service.v1;

option go_package = "github.com/devexps/go-examples/micro-blog/api/gen/go/user_service/v1;v1";
option java_multiple_files = true;
option java_package = "dev.gomicro.api.user_service.v1";

// The user service definition.
service UserService {
  // CreateUser
  rpc CreateUser (CreateUserRequest) returns (User) {}

  // GetUser
  rpc GetUser (GetUserRequest) returns (User);

  // VerifyPassword
  rpc VerifyPassword (VerifyPasswordRequest) returns (User);
}

// User
message User {
  string id = 1;
  string userName = 2;
  string nickName = 3;
  string password = 4;
}

// CreateUserRequest
message CreateUserRequest {
  User user = 1;
  string operatorId = 2;
}

// GetUserRequest
message GetUserRequest {
  string id = 1;
}

// VerifyPasswordRequest
message VerifyPasswordRequest {
  string userName = 1;
  string password = 2;
}